subscription api update
