# src/modules/subscriptions/subscription.schema.ts
@@ -1,7 +1,13 @@
 import { z } from 'zod';
 
 export const createSubscriptionPaymentIntentSchema = z.object({
-  body: z.object({}).optional().default({}),
+  body: z
+    .object({
+      paymentMethodId: z.string().min(1).optional(),
+      confirm: z.boolean().optional().default(false)
+    })
+    .optional()
+    .default({}),
   params: z.object({}).optional().default({}),
   query: z.object({}).optional().default({})
 });
